
Changes:
 - Rebalanced life/mana steal of staves:
  ~ Passion: PLS 5% → 10%
  ~ Mana Staff: PMS 10% → 5%
  ~ Life Crystal Staff: PLS 12.5% → 15%, MLS 5% → 7.5%
  ~ Mana Crystal Staff: PMS 15% → 10%
  ~ Harmony: PLS 12.5% → 15%, MLS 5% → 7.5%, PMS 15% → 10%
 - Rebalanced Dilong:
  ~ MHP: 45000 → 30000
  ~ MAT: 65 → 70
  ~ Draconic Healing Thresholds: 75% 50% 25% 10% → 80% 60% 40% 20%
 - Nerfed Bat Sling drop rate from 5% to 2%.
 - Removed Outgoing Elemental Damage in favor of just amplifying every element rate.
 - Reworked Attributes menu stat colorations.
 - Moved Fire Resistance Potion to buffs category.

Bug Fixes:
 - Fixed Flashbang tooltip.
 - Fixed typo on rich presence battle status.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 15.3 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15.3 (2/6/2025)
Current Level Cap: 25
- - - - - - - - - - - - -
This small update contains a new pair of boots, a leaderboard for kills, and several small tweaks and fixes.

Additions:
 - Added Tellurium Greaves.
 - Added leaderboard for Enemies Defeated.
 - Added leaderboard command on title screen.
 - Leaderboards automatically pull on launch and push after saving.
 - Discord rich presence displays turn count in battle.
 - Added tutorial tip regarding Baby Dragons and Enchanted Dragon Scales.

Changes:
 - Fire takes 25% damage from Ice instead of 0%.
 - Ethereal Bat Wing can drop more than once.
 - Reduced bits/EXP variation from 5% to 3%.
 - Moved Iron Boots from forge to smithery shop.
 - Flower Boots can be crafted at Will's forge.
 - Adjusted a few tellurium related recipes.
 - Infernal Coin now dropped by Apocalypse instead of crafted with Infernal Wand.
 - Apocalypse uses idle motion in place of dying/dead motions.

Bug Fixes:
 - Fixed a memory leak when rendering characters in tall chairs.
 - Fixed statues that buff elemental resistance not working as intended.