@@ -4277,7 +4277,7 @@
     ],
     "iconIndex": 369,
     "name": "Ice II (Tome)",
-    "note": "<Cannot Rename>",
+    "note": "<Cannot Rename>\n\n<Custom Buy Show Eval>\nvisible = $gameSelfSwitches.value([209, 17, 'A']);\n</Custom Buy Show Eval>",
     "params": [
       0,
       0,
@@ -4288,7 +4288,7 @@
       0,
       0
     ],
-    "price": 300
+    "price": 1000
   },
   {
     "id": 165,
