@@ -4085,7 +4085,7 @@
     ],
     "gold": 100,
     "name": "Ice Golem",
-    "note": "<Armor Weakness: Bludgeoning>\n<Element: Ice>\n<Passive State: 136, 140, 144>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<AI Priority>\nState !== Icy Barrier +++ Random 50%: Ice Barrier\n</AI Priority>\n\n<Enemy Drops>\nWarm Scarf: 5%\nIce Cube: 100%\nIce Cube: 100%\nIce Cube: 100%\nIce Cube: 75%\nIce Cube: 75%\nIce Cube: 75%\nFrozen Jewel: 50%\nGlacial Bulwark: 20%\nGRD Scroll: 10%\nIce II (Tome): 2%\nIce Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Bludgeoning>\n<Element: Ice>\n<Passive State: 136, 140, 144>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<AI Priority>\nState !== Icy Barrier +++ Random 50%: Ice Barrier\n</AI Priority>\n\n<Enemy Drops>\nWarm Scarf: 5%\nIce Cube: 100%\nIce Cube: 100%\nIce Cube: 100%\nIce Cube: 75%\nIce Cube: 75%\nIce Cube: 75%\nFrozen Jewel: 50%\nGlacial Bulwark: 20%\nGRD Scroll: 10%\nIce Essence: 20%\n</Enemy Drops>",
     "params": [
       6000,
       0,
@@ -4156,7 +4156,7 @@
     ],
     "gold": 60,
     "name": "Chilling Apparition",
-    "note": "<Element: Ice, Dark>\n<Element Absorb: Ice>\n<Passive State: 57, 129, 144>\n\n<Breathing Speed: 15>\n<Attack Animation: 4>\n\n<AI Priority>\nRandom 50% +++ State !== Frozen II: Ice II\nRandom 50% +++ State !== Blinded: Dark Orb\nAlways: Attack\n</AI Priority>\n\n<Enemy Drops>\nPocket Mirror: 5%\nWarm Scarf: 5%\nIce Cube: 75%\nIce Cube: 75%\nFrozen Jewel: 20%\nMAT Scroll ★: 10%\nIce II (Tome): 2%\nIce Essence: 20%\n</Enemy Drops>\n\n<Night Boost>\nDark Essence: 20% +20%\n</Night Boost>",
+    "note": "<Element: Ice, Dark>\n<Element Absorb: Ice>\n<Passive State: 57, 129, 144>\n\n<Breathing Speed: 15>\n<Attack Animation: 4>\n\n<AI Priority>\nRandom 50% +++ State !== Frozen II: Ice II\nRandom 50% +++ State !== Blinded: Dark Orb\nAlways: Attack\n</AI Priority>\n\n<Enemy Drops>\nPocket Mirror: 5%\nWarm Scarf: 5%\nIce Cube: 75%\nIce Cube: 75%\nFrozen Jewel: 20%\nMAT Scroll ★: 10%\nIce Essence: 20%\n</Enemy Drops>\n\n<Night Boost>\nDark Essence: 20% +20%\n</Night Boost>",
     "params": [
       2000,
       0,
@@ -4222,7 +4222,7 @@
     ],
     "gold": 60,
     "name": "Werewolf",
-    "note": "<Armor Weakness: Slashing>\n<Element: Ice>\n<Passive State: 144>\n\n<Breathing Speed: 20>\n<Attack Animation: 19>\n\n<Enemy Drops>\nWarm Scarf: 5%\nIce Cube: 75%\nIce Cube: 75%\nFrozen Jewel: 20%\nRazor-Sharp Fang: 5%\nIce II (Tome): 2%\nIce Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Ice>\n<Passive State: 144>\n\n<Breathing Speed: 20>\n<Attack Animation: 19>\n\n<Enemy Drops>\nWarm Scarf: 5%\nIce Cube: 75%\nIce Cube: 75%\nFrozen Jewel: 20%\nRazor-Sharp Fang: 5%\nIce Essence: 20%\n</Enemy Drops>",
     "params": [
       2500,
       0,
@@ -4533,7 +4533,7 @@
     ],
     "gold": 48,
     "name": "Ice Slime",
-    "note": "<Element: Ice>\n<Element Absorb: Ice>\n<Passive State: 136, 144>\n\n<Attack Animation: 4>\n\n<AI Priority>\nState === Confused: Purify\nState === Poisoned: Purify\nState === Paralyzed: Purify\n</AI Priority>\n\n<Enemy Drops>\nSlime Scarf: 5%\nWarm Scarf: 5%\nIcy Gel: 75%\nIcy Gel: 75%\nIce Cube: 75%\nIce Cube: 75%\nElixir: 20%\nLarge Elixir: 10%\nFrozen Jewel: 20%\nCondensed Icy Gel: 5%\nIce II (Tome): 2%\nIce Essence: 20%\n</Enemy Drops>",
+    "note": "<Element: Ice>\n<Element Absorb: Ice>\n<Passive State: 136, 144>\n\n<Attack Animation: 4>\n\n<AI Priority>\nState === Confused: Purify\nState === Poisoned: Purify\nState === Paralyzed: Purify\n</AI Priority>\n\n<Enemy Drops>\nSlime Scarf: 5%\nWarm Scarf: 5%\nIcy Gel: 75%\nIcy Gel: 75%\nIce Cube: 75%\nIce Cube: 75%\nElixir: 20%\nLarge Elixir: 10%\nFrozen Jewel: 20%\nCondensed Icy Gel: 5%\nIce Essence: 20%\n</Enemy Drops>",
     "params": [
       1500,
       60,
@@ -5119,7 +5119,7 @@
     ],
     "gold": 48,
     "name": "Polar Bear",
-    "note": "<Armor Weakness: Slashing>\n<Element: Ice>\n<Passive State: 144>\n\n<Breathing Speed: 20>\n<Attack Animation: 19>\n\n<Enemy Drops>\nWarm Scarf: 5%\nRaw Bear Meat: 75%\nRaw Bear Meat: 75%\nHoney: 25%\nFrozen Jewel: 20%\nIce II (Tome): 2%\nIce Essence: 20%\n</Enemy Drops>",
+    "note": "<Armor Weakness: Slashing>\n<Element: Ice>\n<Passive State: 144>\n\n<Breathing Speed: 20>\n<Attack Animation: 19>\n\n<Enemy Drops>\nWarm Scarf: 5%\nRaw Bear Meat: 75%\nRaw Bear Meat: 75%\nHoney: 25%\nFrozen Jewel: 20%\nIce Essence: 20%\n</Enemy Drops>",
     "params": [
       1800,
       0,
