@@ -15277,11 +15277,11 @@
           },
           "directionFix": true,
           "image": {
-            "characterIndex": 0,
+            "tileId": 0,
             "characterName": "!Chest",
             "direction": 2,
             "pattern": 1,
-            "tileId": 0
+            "characterIndex": 3
           },
           "list": [
             {
@@ -15447,11 +15447,11 @@
           },
           "directionFix": true,
           "image": {
-            "characterIndex": 0,
+            "tileId": 0,
             "characterName": "!Chest",
             "direction": 8,
             "pattern": 1,
-            "tileId": 0
+            "characterIndex": 3
           },
           "list": [
             {
@@ -15507,11 +15507,11 @@
           },
           "directionFix": true,
           "image": {
-            "characterIndex": 4,
+            "tileId": 0,
             "characterName": "!Chest",
             "direction": 2,
             "pattern": 1,
-            "tileId": 0
+            "characterIndex": 3
           },
           "list": [
             {
@@ -15624,23 +15624,14 @@
               ]
             },
             {
-              "code": 126,
+              "code": 128,
               "indent": 0,
               "parameters": [
-                215,
+                164,
                 0,
                 0,
-                1
-              ]
-            },
-            {
-              "code": 126,
-              "indent": 0,
-              "parameters": [
-                191,
-                0,
-                0,
-                10
+                1,
+                false
               ]
             },
             {
@@ -15687,11 +15678,11 @@
           },
           "directionFix": true,
           "image": {
-            "characterIndex": 4,
+            "tileId": 0,
             "characterName": "!Chest",
             "direction": 8,
             "pattern": 1,
-            "tileId": 0
+            "characterIndex": 3
           },
           "list": [
             {
